--- a/style.css
+++ b/style.css
@@ -1,13 +1,17 @@
 #container {
     display: flex;
-    flex-wrap: wrap;
-    width: 960px;
+    flex-wrap: wrap; /* Allows squares to wrap into rows */
+    width: 960px;    /* Fixed container size */
     height: 960px;
+    margin: 0 auto;
 }
 
 .square {
-    box-sizing: border-box;
-    border: 1px solid #eee;
-    width: 240px;
-    height: 240px;
+    box-sizing: border-box; /* Includes borders in the element's total width/height */
+    border: 0.1px solid #f0f0f0;
+}
+
+/* This class will be added by JavaScript on hover */
+.hovered {
+    background-color: black;
 }
